# csci619-project

./: .gitignore  LICENSE  README.md  gurobitest.py  lint.sh  note1.md  pyproject.toml  surco_prior_params.npz
assets/: pusher.sdf  pusher.urdf  pusht_env.sdf  scene.sdf  t_block.sdf  t_block.urdf
scripts/: demo_contact_cliff.py  example.py  generate_data.py  inference.py  jaxsim_as_physics_engine_advanced.ipynb  jaxsim_reference.py  main.py  main_surco.py  main_surco_jm.py  optimize_action.py  optimize_action_nn.py  results_single_env.py  results_single_env_multistep.py  surcohybrid.py  training_loop.py  visualize_data.py
src/pusht619/: __init__.py  __main__.py  core.py  models.py
tests/: test_chain_deploy.py  test_core.py  test_smoke.py
